editors/grammar/grammar.js
    source_file: ($) => seq(repeat($._item), optional($._term)),

    // A comment opens with `-- `, with the space, or is a bare `--` ending its line, as the compiler reads it; `--glued` is not one, so a line the compiler refuses is not painted as a comment. A documentation comment opens with `--- ` or is a bare `---`.
    comment: (_) => token(choice(seq("--- ", /.*/), "---", seq("-- ", /.*/), "--")),

    // ---- Items ----

    _item: ($) =>
      choice(
        $.let_item,
        $.mod_item,
        $.use_item,
        $.induct_item,
        $.struct_item,
        $.concept_item,
        $.satisfy_item,
        $.foreign_item,
        $.test_item,
      ),

    // An annotated top-level `let` is an item; an unannotated one is a local `let` opening the final term (`let_term`). The dynamic precedence settles the case both grammars accept — an annotated binding followed by a term — the way the compiler does, as an item.
    // One definition, or a `let f … and g …;` group; each member takes its own `pub`.
    let_item: ($) =>
      prec.dynamic(
        1,
        seq(
          optional("pub"),
          "let",
          $.let_member,
          repeat(seq(optional("pub"), "and", $.let_member)),
          ";",
        ),
      ),

    let_member: ($) => seq(field("name", $.identifier), $._signature),

    // `(params) -> type = body` or `: type = body`.
    _signature: ($) =>
      choice(
        seq(
          field("parameters", $.parameters),
          "->",
          field("type", $._term),
          "=",
          field("body", $._term),
        ),
        seq(":", field("type", $._term), "=", field("body", $._term)),
      ),

    mod_item: ($) =>
      seq(
        optional("pub"),
        "mod",
        field("name", $.identifier),
        choice(";", seq(repeat($._item), "end")),
      ),

    use_item: ($) =>
      seq(
        optional("pub"),
        "use",
        optional(field("path", $.path)),
        choice($.use_group, $.use_glob),
        ";",
      ),

    // `/{` and `/*` are single tokens: after a path, a lone `/` would be read as one more segment.
    use_group: ($) => seq("/{", commaList($.use_entry), "}"),

    use_glob: (_) => "/*",

    use_entry: ($) => seq(optional(choice("mod", "let")), field("name", $.identifier)),

    induct_item: ($) =>
      seq(
        optional("pub"),
        "induct",
        $.induct_body,
        repeat(seq(optional("pub"), "and", $.induct_body)),
        "end",
      ),

    induct_body: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("parameters", $.type_parameters)),
        ":",
        $._arity,
        repeat($.constructor),
      ),

    type_parameters: ($) => seq("(", commaList($.type_parameter), ")"),

    // A named parameter, plain or `@`, or a `use` premise, which has no name.
    type_parameter: ($) =>
      choice(
        seq(optional("@"), field("name", $.identifier), ":", field("type", $._term)),
        seq("use", field("type", $._term)),
      ),

    // `(indices) -> Sort` or a bare `Sort`, each with its own representation `pub`.
    _arity: ($) =>
      choice(
        seq("(", commaList($.index), ")", "->", optional("pub"), $.sort),
        seq(optional("pub"), $.sort),
      ),

    index: ($) =>
      choice(seq(field("name", $.identifier), ":", field("type", $._term)), field("type", $._term)),

    constructor: ($) =>
      seq(
        "|",
        field("name", $.identifier),
        "(",
        commaList($.payload),
        ")",
        optional(seq(":", "(", commaList($._term), ")")),
      ),

    // Plain or `@`, named or the type alone.
    payload: ($) =>
      choice(
        seq(optional("@"), field("name", $.identifier), ":", field("type", $._term)),
        seq(optional("@"), field("type", $._term)),
      ),

    // One structure, or a `struct A … and B …` group whose fields name one another; each member takes its own `pub`.
    struct_item: ($) =>
      seq(
        optional("pub"),
        "struct",
        $.struct_member,
        repeat(seq(optional("pub"), "and", $.struct_member)),
      ),

    struct_member: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("parameters", $.type_parameters)),
        ":",
        optional("pub"),
        $.sort,
        "{",
        // A structure's field is plain or hidden under `@`; a tuple type's takes no mark.
        commaList(seq(optional("@"), $.field_declaration)),
        "}",
      ),

    // A tuple-type or struct field: `label: T`, the signature sugar `label(params) -> T`, or a bare type.
    field_declaration: ($) =>
      choice(
        seq(
          field("name", $.identifier),
          field("parameters", $.function_type_parameters),
          "->",
          field("type", $._term),
        ),
        seq(field("name", $.identifier), ":", field("type", $._term)),
        field("type", $._term),
      ),

    // One concept, or a `concept A … and B …` group whose method types name one another's dictionaries.
    concept_item: ($) =>
      seq(
        optional("pub"),
        "concept",
        $.concept_member,
        repeat(seq(optional("pub"), "and", $.concept_member)),
      ),

    concept_member: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("parameters", $.type_parameters)),
        ":",
        optional("pub"),
        $.sort,
        "{",
        commaList($.concept_field),
        "}",
      ),

    concept_field: ($) => choice(seq("use", field("type", $._term)), $.field_declaration),

    // One witness, or a `satisfy C(A) { … } and D(B) { … }` group of witnesses that resolve through one another. A member's body is written `{ … }` or omitted as `;` — the derived form, whose body the compiler writes — and a group may mix the two. A written body holds implementation fields alone: a concept literal admits a `use <term>` fill for a superclass slot and a witness does not, since resolution fills it.
    satisfy_item: ($) =>
      seq("satisfy", $.satisfy_member, repeat(seq("and", $.satisfy_member))),

    satisfy_member: ($) =>
      seq(
        optional(seq(field("parameters", $.parameters), "=>")),
        field("concept", $.path),
        optional(field("arguments", $.arguments)),
        choice(seq("{", commaList($.field_definition), "}"), ";"),
      ),

    // `label = value` or the definition sugar `label(params) = value`.
    field_definition: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("parameters", $.sugar_parameters)),
        "=",
        field("value", $._term),
      ),

    sugar_parameters: ($) => seq("(", commaList($.sugar_parameter), ")"),

    sugar_parameter: ($) =>
      seq(
        optional(choice("@", "use")),
        field("name", $.identifier),
        optional(seq(":", field("type", $._term))),
      ),

    foreign_item: ($) =>
      seq(
        optional("pub"),
        "foreign",
        field("name", $.identifier),
        ":",
        field("type", $._term),
        ";",
      ),

    // A test declaration: `test name = body;`. Never `pub`, and never parameterized — a claim about every instantiation is a `let` whose type states it, so there is no telescope here to hold.
    test_item: ($) =>
      seq("test", field("name", $.identifier), "=", field("body", $._term), ";"),

    // ---- Telescopes ----

    // A `let`/`satisfy` telescope: a `use` premise is its type, a plain or `@` parameter a pattern with its type, and an `@` one may be its type alone.
    parameters: ($) => seq("(", commaList($.parameter), ")"),

    parameter: ($) =>
      choice(
        seq("use", field("type", $._term)),
        seq(optional("@"), field("pattern", $._pattern), ":", field("type", $._term)),
        seq("@", field("type", $._term)),
      ),

    function_type_parameters: ($) => seq("(", commaList($.function_type_parameter), ")"),

    function_type_parameter: ($) =>
      choice(
        seq("use", field("type", $._term)),
        seq(optional("@"), field("name", $.identifier), ":", field("type", $._term)),
        seq(optional("@"), field("type", $._term)),
      ),

    _term: ($) =>
      choice(
        $.let_term,
        $.function_type,
        $.lambda,
        $._infix,
      ),

    let_term: ($) => seq($.let_binding, field("body", $._term)),

    let_binding: ($) =>
      seq(
        "let",
        field("pattern", $._pattern),
        choice(
          seq(
            field("parameters", $.parameters),
            "->",
            field("type", $._term),
            "=",
            field("value", $._term),
          ),
          seq(optional(seq(":", field("type", $._term))), "=", field("value", $._term)),
        ),
        repeat(seq("and", $.let_member)),
        ";",
      ),

    function_type: ($) =>
      seq(field("parameters", $.function_type_parameters), "->", field("result", $._term)),

    _infix: ($) => choice($.binary, $._applied),

    binary: ($) => {
      const table = [
        [PRECEDENCE.or, "||"],
        [PRECEDENCE.and, "&&"],
        [PRECEDENCE.compare, choice("==", "!=", "<", ">", "<=", ">=")],
        [PRECEDENCE.add, choice("+", "-")],
        [PRECEDENCE.multiply, choice("*", "/", "%")],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(field("left", $._infix), field("operator", operator), field("right", $._infix)),
          ),
        ),
      );
    },

    _applied: ($) => choice($._atom, $.call, $.projection, $.bang),

    call: ($) =>
      prec.left(PRECEDENCE.suffix, seq(field("function", $._applied), field("arguments", $.arguments))),

    arguments: ($) => seq("(", commaList($.argument), ")"),

    argument: ($) => seq(optional(choice("@", "use")), $._term),

    projection: ($) =>
      prec.left(
        PRECEDENCE.suffix,
        seq(
          field("value", $._applied),
          token.immediate("."),
          field("field", alias(token.immediate(choice(/[0-9]+/, IDENTIFIER)), $.field_identifier)),
        ),
      ),

    bang: ($) => prec.left(PRECEDENCE.suffix, seq(field("action", $._applied), "!")),

    // `match` and `choose` are atoms because `end` closes them, so an operator or a suffix may follow one bare.
    sort: (_) => choice("Type", "Prop"),

    boolean: (_) => choice("true", "false"),

    // A path is whitespace-free: the segments after the first are immediate tokens.
    path: ($) =>
      seq(
        choice(seq("/", alias(token.immediate(IDENTIFIER), $.identifier)), $.identifier),
        repeat(seq(token.immediate("/"), alias(token.immediate(IDENTIFIER), $.identifier))),
      ),

    // A term-position path whose head is the lexed `test` keyword, shown as the path it spells. Keyword extraction lexes `test` over `identifier` wherever an item may start, so a term spelled `test` there — `let x: Nat = 1; test(1)` — would strand the keyword in an ERROR node without this alternative. Term position only: binder and pattern paths never compete with an item start, and the compiler's parser backtracks out of the same overlap by itself.
    struct_literal: ($) =>
      seq(
        field("type", $.path),
        optional(field("arguments", $.arguments)),
        "{",
        commaList($.struct_entry),
        "}",
      ),

    // A `..base` spread, a `use` fill of a concept's superclass, or a field — plain, or a hidden one under `@`.
    struct_entry: ($) =>
      choice(
        $.spread,
        seq("use", $._term),
        seq(optional("@"), choice($.field_definition, $._term)),
      ),

    spread: ($) => seq("..", $._term),

    list_literal: ($) => seq("[", commaList(choice($.spread, $._term)), "]"),

    // The grain letter is glued to the bracket: `b[` and `x[` are single tokens, so `b [1]` stays the binder `b` before a list.
    packed_literal: ($) =>
      seq(field("grain", choice("b[", "x[")), commaList(choice($.spread, $._term)), "]"),

    number: (_) =>
      token(
        choice(
          /[+-](inf|nan)\.0/,
          /[+-]?[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,
          /[+-]?0x[0-9a-fA-F]+/,
          /[+-]?0b[01]+/,
          /[+-]?[0-9]+/,
        ),
      ),

    character: (_) =>
      token(seq("'", choice(/[^'\\]/, /\\[ntr\\']/, /\\u\{[0-9a-fA-F]+\}/), "'")),

    // An unrecognized escape stands for itself, so only the six recognized ones are named — the five one-letter ones and the braced Unicode scalar. Lexical precedence outranks match length, and both ranks below are load-bearing: the named escape outranks the catch-all, since a `\n` matches both at the same length and the catch-all won the tie, so no escape was ever named; and the plain content outranks the comment token, since a `--` inside a string is otherwise a comment running to the end of the line, which is what made every string spelling a long option a parse error.
    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.escape_sequence,
            token.immediate(prec(1, /[^"\\]+/)),
            token.immediate(/\\./),
          ),
        ),
        token.immediate('"'),
      ),

    // A block string literal: `"""` and a newline, the lines, a newline and `"""`. The opener outranks the one-line form's opener by length. A content run stops at a newline, so each line break is its own token and the closer is reached with nothing eaten past it; a mid-line `"""` outranks the quote token by length and closes, which is what the compiler refuses. Highlighting is all this serves, so the closer's own line is not checked here.
    block_string: ($) =>
      seq(
        token(seq('"""', /[ \t]*\n/)),
        repeat(
          choice(
            $.escape_sequence,
            token.immediate(prec(1, /[^"\\\n]+/)),
            token.immediate(/\\[^\n]/),
            token.immediate(/\\\n/),
            token.immediate(/""?/),
            token.immediate(/\n[ \t]*/),
          ),
        ),
        token.immediate('"""'),
      ),

    escape_sequence: (_) =>
      token.immediate(prec(1, choice(/\\[ntr\\"]/, /\\u\{[0-9a-fA-F]+\}/))),

    // ---- Irrefutable patterns ----

    _pattern: ($) =>
      choice($.identifier, $.tuple_pattern, $.struct_pattern, $.parenthesized_pattern),

    identifier: (_) => IDENTIFIER,
  },
});
