editors/grammar/test/corpus/items.txt
================================================================================
Definitions with and without sugar
================================================================================

pub let zero: Nat = 0;
let map(@A: Type, @B: Type, m: Option(A), f: (A) -> B) -> Option(B) = m;
pub foreign log: (Bytes) -> Nat;

--------------------------------------------------------------------------------

(source_file
  (let_item
    (let_member
      (identifier)
      (path
        (identifier))
      (number)))
  (let_item
    (let_member
      (identifier)
      (parameters
        (parameter
          (identifier)
          (sort))
        (parameter
          (identifier)
          (sort))
        (parameter
          (identifier)
          (call
            (path
              (identifier))
            (arguments
              (argument
                (path
                  (identifier))))))
        (parameter
          (identifier)
          (function_type
            (function_type_parameters
              (function_type_parameter
                (path
                  (identifier))))
            (path
              (identifier)))))
      (call
        (path
          (identifier))
        (arguments
          (argument
            (path
              (identifier)))))
      (path
        (identifier))))
  (foreign_item
    (identifier)
    (function_type
      (function_type_parameters
        (function_type_parameter
          (path
            (identifier))))
      (path
        (identifier)))))

================================================================================
A recursive group, each member with its own visibility
================================================================================

pub let even(n: Nat) -> Bool = odd(n)
and odd(n: Nat) -> Bool = even(n);

--------------------------------------------------------------------------------

(source_file
  (let_item
    (let_member
      (identifier)
      (parameters
        (parameter
          (identifier)
          (path
            (identifier))))
      (path
        (identifier))
      (call
        (path
          (identifier))
        (arguments
          (argument
            (path
              (identifier))))))
    (let_member
      (identifier)
      (parameters
        (parameter
          (identifier)
          (path
            (identifier))))
      (path
        (identifier))
      (call
        (path
          (identifier))
        (arguments
          (argument
            (path
              (identifier))))))))

================================================================================
Modules and imports
================================================================================

pub mod Nat;
mod Internal
    pub let value: Nat = 1;
end
use /std/{Nat, mod Syntax, let parse};
pub use Option/*;
use /{X};

--------------------------------------------------------------------------------

(source_file
  (mod_item
    (identifier))
  (mod_item
    (identifier)
    (let_item
      (let_member
        (identifier)
        (path
          (identifier))
        (number))))
  (use_item
    (path
      (identifier))
    (use_group
      (use_entry
        (identifier))
      (use_entry
        (identifier))
      (use_entry
        (identifier))))
  (use_item
    (path
      (identifier))
    (use_glob))
  (use_item
    (use_group
      (use_entry
        (identifier)))))

================================================================================
Inductives, indexed and mutual
================================================================================

pub induct Option(A: Type): pub Type
| some(A)
| none()
end
pub induct Vec(T: Type): (length: Nat) -> pub Type
| nil(): (0)
| cons(@n: Nat, head: T, tail: Vec(T)(n)): (n + 1)
and Eq(@A: Type): (A, A) -> Prop
| refl(@value: A): (value, value)
end

--------------------------------------------------------------------------------

(source_file
  (induct_item
    (induct_body
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort)))
      (sort)
      (constructor
        (identifier)
        (payload
          (path
            (identifier))))
      (constructor
        (identifier))))
  (induct_item
    (induct_body
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort)))
      (index
        (identifier)
        (path
          (identifier)))
      (sort)
      (constructor
        (identifier)
        (number))
      (constructor
        (identifier)
        (payload
          (identifier)
          (path
            (identifier)))
        (payload
          (identifier)
          (path
            (identifier)))
        (payload
          (identifier)
          (call
            (call
              (path
                (identifier))
              (arguments
                (argument
                  (path
                    (identifier)))))
            (arguments
              (argument
                (path
                  (identifier))))))
        (binary
          (path
            (identifier))
          (number))))
    (induct_body
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort)))
      (index
        (path
          (identifier)))
      (index
        (path
          (identifier)))
      (sort)
      (constructor
        (identifier)
        (payload
          (identifier)
          (path
            (identifier)))
        (path
          (identifier))
        (path
          (identifier))))))

================================================================================
Structure and concept groups, members naming one another
================================================================================

pub struct Node: pub Type { value: Nat, next: Option(Edge) }
and Edge: pub Type { weight: Nat, to: Node }
concept A(T: Type): pub Type { fa(T) -> B(T) }
and B(T: Type): pub Type { fb(T) -> Nat }

--------------------------------------------------------------------------------

(source_file
  (struct_item
    (struct_member
      (identifier)
      (sort)
      (field_declaration
        (identifier)
        (path
          (identifier)))
      (field_declaration
        (identifier)
        (call
          (path
            (identifier))
          (arguments
            (argument
              (path
                (identifier)))))))
    (struct_member
      (identifier)
      (sort)
      (field_declaration
        (identifier)
        (path
          (identifier)))
      (field_declaration
        (identifier)
        (path
          (identifier)))))
  (concept_item
    (concept_member
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort)))
      (sort)
      (concept_field
        (field_declaration
          (identifier)
          (function_type_parameters
            (function_type_parameter
              (path
                (identifier))))
          (call
            (path
              (identifier))
            (arguments
              (argument
                (path
                  (identifier))))))))
    (concept_member
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort)))
      (sort)
      (concept_field
        (field_declaration
          (identifier)
          (function_type_parameters
            (function_type_parameter
              (path
                (identifier))))
          (path
            (identifier)))))))

================================================================================
Structures and concepts
================================================================================

pub struct Pair(A: Type, B: Type): pub Type {
    fst: A,
    snd: B,
}
pub struct Meters: pub Type { Nat }
pub concept Ordered(A: Type): Type {
    use Equal(A),
    cmp(A, A) -> Ordering,
    law: (x: A) -> Eq(x, x),
}

--------------------------------------------------------------------------------

(source_file
  (struct_item
    (struct_member
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort))
        (type_parameter
          (identifier)
          (sort)))
      (sort)
      (field_declaration
        (identifier)
        (path
          (identifier)))
      (field_declaration
        (identifier)
        (path
          (identifier)))))
  (struct_item
    (struct_member
      (identifier)
      (sort)
      (field_declaration
        (path
          (identifier)))))
  (concept_item
    (concept_member
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort)))
      (sort)
      (concept_field
        (call
          (path
            (identifier))
          (arguments
            (argument
              (path
                (identifier))))))
      (concept_field
        (field_declaration
          (identifier)
          (function_type_parameters
            (function_type_parameter
              (path
                (identifier)))
            (function_type_parameter
              (path
                (identifier))))
          (path
            (identifier))))
      (concept_field
        (field_declaration
          (identifier)
          (function_type
            (function_type_parameters
              (function_type_parameter
                (identifier)
                (path
                  (identifier))))
            (call
              (path
                (identifier))
              (arguments
                (argument
                  (path
                    (identifier)))
                (argument
                  (path
                    (identifier)))))))))))

================================================================================
A witness group, each member resolving through the other
================================================================================

satisfy Show(A) {
    show(x) = Show/show(x),
}
and (@B: Type) => Show(B) {
    show(x) = Show/show(x),
}

--------------------------------------------------------------------------------

(source_file
  (satisfy_item
    (satisfy_member
      (path
        (identifier))
      (arguments
        (argument
          (path
            (identifier))))
      (field_definition
        (identifier)
        (sugar_parameters
          (sugar_parameter
            (identifier)))
        (call
          (path
            (identifier)
            (identifier))
          (arguments
            (argument
              (path
                (identifier)))))))
    (satisfy_member
      (parameters
        (parameter
          (identifier)
          (sort)))
      (path
        (identifier))
      (arguments
        (argument
          (path
            (identifier))))
      (field_definition
        (identifier)
        (sugar_parameters
          (sugar_parameter
            (identifier)))
        (call
          (path
            (identifier)
            (identifier))
          (arguments
            (argument
              (path
                (identifier)))))))))

================================================================================
Witnesses, bare and parameterized
================================================================================

satisfy Show(Nat) {
    show(n) = Nat/to_str(n),
}
satisfy (@A: Type, use Show(A)) => Show(List(A)) {
    show = show_list,
    Ok(b) = Nat/Lt(0, b),
}

--------------------------------------------------------------------------------

(source_file
  (satisfy_item
    (satisfy_member
      (path
        (identifier))
      (arguments
        (argument
          (path
            (identifier))))
      (field_definition
        (identifier)
        (sugar_parameters
          (sugar_parameter
            (identifier)))
        (call
          (path
            (identifier)
            (identifier))
          (arguments
            (argument
              (path
                (identifier))))))))
  (satisfy_item
    (satisfy_member
      (parameters
        (parameter
          (identifier)
          (sort))
        (parameter
          (call
            (path
              (identifier))
            (arguments
              (argument
                (path
                  (identifier)))))))
      (path
        (identifier))
      (arguments
        (argument
          (call
            (path
              (identifier))
            (arguments
              (argument
                (path
                  (identifier)))))))
      (field_definition
        (identifier)
        (path
          (identifier)))
      (field_definition
        (identifier)
        (sugar_parameters
          (sugar_parameter
            (identifier)))
        (call
          (path
            (identifier)
            (identifier))
          (arguments
            (argument
              (number))
            (argument
              (path
                (identifier)))))))))

================================================================================
An annotated top-level let is an item even when a term follows
================================================================================

let x: Nat = 1;
let y = 2;
print(y)

--------------------------------------------------------------------------------

(source_file
  (let_item
    (let_member
      (identifier)
      (path
        (identifier))
      (number)))
  (let_term
    (let_binding
      (identifier)
      (number))
    (call
      (path
        (identifier))
      (arguments
        (argument
          (path
            (identifier)))))))

================================================================================
A test declaration
================================================================================

test the_answer_holds =
    Test/assert(42 == 42);

--------------------------------------------------------------------------------

(source_file
  (test_item
    (identifier)
    (call
      (path
        (identifier)
        (identifier))
      (arguments
        (argument
          (binary
            (number)
            (number)))))))

================================================================================
The test keyword is contextual and stays an ordinary name elsewhere
================================================================================

let test: Nat = 1;
test(test)

--------------------------------------------------------------------------------

(source_file
  (let_item
    (let_member
      (identifier)
      (path
        (identifier))
      (number)))
  (call
    (path
      (identifier))
    (arguments
      (argument
        (path
          (identifier))))))

================================================================================
A derived witness omits its body, alone and inside a mixed group
================================================================================

satisfy Spell(Point);
satisfy (@A: Type, use Spell(A)) => Spell(Tree(A));
and Equal(Point) {
    eql(a, b) = same(a, b),
}

--------------------------------------------------------------------------------

(source_file
  (satisfy_item
    (satisfy_member
      (path
        (identifier))
      (arguments
        (argument
          (path
            (identifier))))))
  (satisfy_item
    (satisfy_member
      (parameters
        (parameter
          (identifier)
          (sort))
        (parameter
          (call
            (path
              (identifier))
            (arguments
              (argument
                (path
                  (identifier)))))))
      (path
        (identifier))
      (arguments
        (argument
          (call
            (path
              (identifier))
            (arguments
              (argument
                (path
                  (identifier))))))))
    (satisfy_member
      (path
        (identifier))
      (arguments
        (argument
          (path
            (identifier))))
      (field_definition
        (identifier)
        (sugar_parameters
          (sugar_parameter
            (identifier))
          (sugar_parameter
            (identifier)))
        (call
          (path
            (identifier))
          (arguments
            (argument
              (path
                (identifier)))
            (argument
              (path
                (identifier)))))))))

================================================================================
A type declared under a premise, and heads that take a call's marks
================================================================================

struct Slot(K: Type, use Key(K), V: Type): Type { key: K }
induct Chain(K: Type, use Key(K)): Type
| done()
end
satisfy Named(@Nat) {
    name = "nat",
}
let box: Box(@Nat) = Box(@Nat) { value = 1 };
let two: Slot(Nat, use other, Str) = Slot(Nat, use other, Str) { key = 2 };

--------------------------------------------------------------------------------

(source_file
  (struct_item
    (struct_member
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort))
        (type_parameter
          (call
            (path
              (identifier))
            (arguments
              (argument
                (path
                  (identifier))))))
        (type_parameter
          (identifier)
          (sort)))
      (sort)
      (field_declaration
        (identifier)
        (path
          (identifier)))))
  (induct_item
    (induct_body
      (identifier)
      (type_parameters
        (type_parameter
          (identifier)
          (sort))
        (type_parameter
          (call
            (path
              (identifier))
            (arguments
              (argument
                (path
                  (identifier)))))))
      (sort)
      (constructor
        (identifier))))
  (satisfy_item
    (satisfy_member
      (path
        (identifier))
      (arguments
        (argument
          (path
            (identifier))))
      (field_definition
        (identifier)
        (string))))
  (let_item
    (let_member
      (identifier)
      (call
        (path
          (identifier))
        (arguments
          (argument
            (path
              (identifier)))))
      (struct_literal
        (path
          (identifier))
        (arguments
          (argument
            (path
              (identifier))))
        (struct_entry
          (field_definition
            (identifier)
            (number))))))
  (let_item
    (let_member
      (identifier)
      (call
        (path
          (identifier))
        (arguments
          (argument
            (path
              (identifier)))
          (argument
            (path
              (identifier)))
          (argument
            (path
              (identifier)))))
      (struct_literal
        (path
          (identifier))
        (arguments
          (argument
            (path
              (identifier)))
          (argument
            (path
              (identifier)))
          (argument
            (path
              (identifier))))
        (struct_entry
          (field_definition
            (identifier)
            (number)))))))

================================================================================
A structure's hidden field, named and as its type alone
================================================================================

struct Positive: pub Type {
    n: Nat,
    @ok: Holds(0 < n),
    @Holds(n < 10),
}

--------------------------------------------------------------------------------

(source_file
  (struct_item
    (struct_member
      (identifier)
      (sort)
      (field_declaration
        (identifier)
        (path
          (identifier)))
      (field_declaration
        (identifier)
        (call
          (path
            (identifier))
          (arguments
            (argument
              (binary
                (number)
                (path
                  (identifier)))))))
      (field_declaration
        (call
          (path
            (identifier))
          (arguments
            (argument
              (binary
                (path
                  (identifier))
                (number)))))))))
